# DRF_Homework

./: .env.sample  README.md  coverage_report.txt  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/: payments.json  users.json
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_image_alter_lesson_image.py  0003_course_user_lesson_user.py  0004_course_price.py
subscriptions/: models.py  serializers.py  tests.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_remove_payment_user_user_payment.py  0004_payment_user_alter_user_payment.py  0005_alter_payment_user.py  0006_remove_user_payment_alter_payment_user.py  0007_remove_payment_method_remove_payment_paid_lesson_and_more.py  0008_alter_payment_user.py  0009_payment_link.py  0010_payment_session_id.py  0011_alter_user_options.py  0012_alter_user_options_alter_user_last_login.py  0013_alter_user_last_login.py  0014_alter_user_last_login.py
